<resources>
    <string name="app_name">PotholeProject</string>
    <string name="full_name">Full Name*:</string>
    <string name="email">Email*:</string>
    <string name="mobile_no">Mobile No.*:</string>
    <string name="password">Password*:</string>
    <string name="confirm_password">Confirm Password*:</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin_map">Map</string>
    <string name="title_activity_maps">Map</string>
</resources>
